# minimal_ceres_sophus

./: CMakeLists.txt  README  README.md  circularconstraint.h  local_parameterization_se3.hpp  main.cpp  probe_gradient.cpp  se3_spline.h
